--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                 <button id="correctAnswer1" data-answer="true">
                     2.alerts
                 </button>
-                <button id="wrongAnswer1" data-answer="false">
+                <button id="wrongAnswer1.1" data-answer="false">
                     3.numbers
                 </button>
-                <button id="wrongAnswer1" data-answer="false">
+                <button id="wrongAnswer1.2" data-answer="false">
                     4.strings
                 </button>
             </li>
@@ -48,16 +48,16 @@
         <h3>the condition in an if / else statementis enclosed within ____:</h3>
         <ul>
             <li class="Answers">
-                <button id="wrongAnswer" data-answer="false">
+                <button id="wrongAnswer2" data-answer="false">
                     1.quotes
                 </button>
-                <button id="correctAnswer" data-answer="false">
+                <button id="correctAnswer2" data-answer="false">
                     2.curly brackets
                 </button>
-                <button id="wrongAnswer" data-answer="true">
+                <button id="wrongAnswer2.1" data-answer="true">
                     3.parentheses
                 </button>
-                <button id="wrongAnswer" data-answer="false">
+                <button id="wrongAnswer2.2" data-answer="false">
                     4.square brackets
                 </button>
             </li>
@@ -68,16 +68,16 @@
         <h3>Arrays in JavaScript can be used to store:</h3>
         <ul>
             <li class="Answers">
-                <button id="wrongAnswer" data-answer="false">
+                <button id="wrongAnswer3" data-answer="false">
                     1.numbers and strings
                 </button>
-                <button id="correctAnswer" data-answer="false">
+                <button id="correctAnswer3" data-answer="false">
                     2.other arrays
                 </button>
-                <button id="wrongAnswer" data-answer="false">
+                <button id="wrongAnswer3.1" data-answer="false">
                     3.booleans
                 </button>
-                <button id="wrongAnswer" data-answer="true">
+                <button id="wrongAnswer3.2" data-answer="true">
                     4.all of the above
                 </button>
             </li>
@@ -88,16 +88,16 @@
         <h3>String values must be enclosed within ____ when being assigned to variable:</h3>
         <ul>
             <li class="Answers">
-                <button id="wrongAnswer" data-answer="false">
+                <button id="wrongAnswer4" data-answer="false">
                     1.commas
                 </button>
-                <button id="correctAnswer" data-answer="true">
+                <button id="correctAnswer4" data-answer="true">
                     2.curly brackets
                 </button>
-                <button id="wrongAnswer" data-answer="false">
+                <button id="wrongAnswer4.1" data-answer="false">
                     3.quotes
                 </button>
-                <button id="wrongAnswer" data-answer="false">
+                <button id="wrongAnswer4.1" data-answer="false">
                     4.parentheses
                 </button>
             </li>
