Created if statement to display wrong or correct depending on user input, as well as created css atributes to change display of results

--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
                 </button>
             </li>
         </ul>
-        <div class="correct hide">Correct!</div>
-        <div class="wrong hide">Wrong!</div>
+        
     </div>
 
     <div class="thirdPage hide">
@@ -71,13 +70,13 @@
                 <button id="wrongAnswer3" data-answer="false">
                     1.numbers and strings
                 </button>
-                <button id="correctAnswer3" data-answer="false">
+                <button id="wrongAnswer3.2" data-answer="false">
                     2.other arrays
                 </button>
                 <button id="wrongAnswer3.1" data-answer="false">
                     3.booleans
                 </button>
-                <button id="wrongAnswer3.2" data-answer="true">
+                <button id="correctAnswer3" data-answer="true">
                     4.all of the above
                 </button>
             </li>
@@ -103,6 +102,10 @@
             </li>
         </ul>
     </div>
+        <div class="result"></div>
+        <div class="wrong"></div>
+
+
     <div class="lastPage hide"></div>
 
     <script src="./assets/scripts.js"></script>
