--- a/index.html
+++ b/index.html
@@ -22,91 +22,29 @@
     </div>
 
 
-    <div class="secondPage hide">
-        <h3>Commonly used data type DO NOT include:</h3>
-        <ul>
-            <li class="Answers">
-                <button id="wrongAnswer1" data-answer="false">
-                    1.booleans
-                </button>
-                <button id="correctAnswer1" data-answer="true">
-                    2.alerts
-                </button>
-                <button id="wrongAnswer1.1" data-answer="false">
-                    3.numbers
-                </button>
-                <button id="wrongAnswer1.2" data-answer="false">
-                    4.strings
-                </button>
-            </li>
-        </ul>
-        
-    </div>
-
-    <div class="thirdPage hide">
-        <h3>the condition in an if / else statementis enclosed within ____:</h3>
-        <ul>
-            <li class="Answers">
-                <button id="wrongAnswer2" data-answer="false">
-                    1.quotes
-                </button>
-                <button id="correctAnswer2" data-answer="false">
-                    2.curly brackets
-                </button>
-                <button id="wrongAnswer2.1" data-answer="true">
-                    3.parentheses
-                </button>
-                <button id="wrongAnswer2.2" data-answer="false">
-                    4.square brackets
-                </button>
-            </li>
+    <div  class="allQuestions hide">
+        <h3 id="question-h3"></h3>
+        <ul id="answers-ul">
         </ul>
     </div>
 
-    <div class="fourthPage hide">
-        <h3>Arrays in JavaScript can be used to store:</h3>
-        <ul>
-            <li class="Answers">
-                <button id="wrongAnswer3" data-answer="false">
-                    1.numbers and strings
-                </button>
-                <button id="wrongAnswer3.2" data-answer="false">
-                    2.other arrays
-                </button>
-                <button id="wrongAnswer3.1" data-answer="false">
-                    3.booleans
-                </button>
-                <button id="correctAnswer3" data-answer="true">
-                    4.all of the above
-                </button>
-            </li>
-        </ul>
-    </div>
+    
 
-    <div class="fithPage hide">
-        <h3>String values must be enclosed within ____ when being assigned to variable:</h3>
-        <ul>
-            <li class="Answers">
-                <button id="wrongAnswer4" data-answer="false">
-                    1.commas
-                </button>
-                <button id="correctAnswer4" data-answer="true">
-                    2.curly brackets
-                </button>
-                <button id="wrongAnswer4.1" data-answer="false">
-                    3.quotes
-                </button>
-                <button id="wrongAnswer4.1" data-answer="false">
-                    4.parentheses
-                </button>
-            </li>
-        </ul>
+    <div class="lastPage hide">
+        <h3>All done!</h3>
+        <h4 id="finalScoreTotal"></h4>
+        <h5>Enter Initials:</h5><input type="text"><button id="submit">submit</button>
     </div>
         <div class="result"></div>
-        <div class="wrong"></div>
 
+    <div class="highscorePage hide">
+        <h4>Highscores</h4>
+            <ul>
+                <li id="highScoreList"></li>
+            </ul>
+            <button id="goBack">Go Back</button><button id="clearHighscores">Clear Highscores</button>
+    </div>
 
-    <div class="lastPage hide"></div>
 
     <script src="./assets/scripts.js"></script>
 </body>
