Completed  the functionality of the webpage by adding local storages to js file and made everything look nice with the css file, as well as adding the required text to the readme file

--- a/index.html
+++ b/index.html
@@ -32,16 +32,14 @@
 
     <div class="lastPage hide">
         <h3>All done!</h3>
-        <h4 id="finalScoreTotal"></h4>
-        <h5>Enter Initials:</h5><input type="text"><button id="submit">submit</button>
+        <h4 >Your final score: <span id="finalScoreTotal"></span></h4>
+        <h5>Enter Initials:</h5><input id=initialsInput type="text"><button id="submit">submit</button>
     </div>
         <div class="result"></div>
 
     <div class="highscorePage hide">
-        <h4>Highscores</h4>
-            <ul>
-                <li id="highScoreList"></li>
-            </ul>
+        <h4>Highscores:</h4>
+            <h6></h6>
             <button id="goBack">Go Back</button><button id="clearHighscores">Clear Highscores</button>
     </div>
 
